--- a/index.html
+++ b/index.html
@@ -1,99 +1,32 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Rock, Paper, Scissors</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
+
 <body>
- 
-    <script>
+    <div class="prompt">
+        <p class="commentary" id="commentary"> Select Rock, Paper or Scissors!</p>
+    </div>
+    <div class="gameround">
+        <p class="round-text" id="round-number">Current round: 1</p>
+    </div>
+    <div class="gameround">
+        <p class="score-text" id="score">You 0-0 Computer</p>
+    </div>
+    <div class="button-bottom">
+        <button id="Rock" class="select" type="button"> Select Rock...</button>
+        <button id="Paper" class="select" type="button"> Select Paper...</button>
+        <button id="Scissors" class="select" type="button"> Select Scissors...</button>
+    </div>
 
-        let playerPoints = 0;
-        let compPoints = 0;
-
-
-        function computerPlay() {
-            //Computer chooses an option
-            var options = [
-            "rock",
-            "paper",
-            "scissors"
-              ];
-            
-            let randomChoice = options[Math.floor(Math.random()*options.length)];
-            let computerSelection = randomChoice;
-            return computerSelection;
-        }
-
-        function getPlayerSelection() {
-                //Allow player to choose
-                let playerSelection = prompt("Rock, Paper or Scissors?...", "Type here...").toLowerCase();
-                return playerSelection;
-        }
-        
-
-        function gameRound(playerSelection, computerSelection) {
-            //Compare player and computer selections and reeturn winner
-            alert("Computer chose... " + (computerSelection));
-
-            switch (computerSelection) {
-                case "rock":
-                    if(playerSelection == computerSelection){
-                        return "Draw!";
-                    } else if(playerSelection == "scissors"){
-                        compPoints += 1;
-                        return "You lose! Rock beats Scissors!";
-                    } else if(playerSelection == "paper"){
-                        playerPoints += 1;
-                        return "You win! Paper beats Rock";
-                    } else{
-                        return "Invalid input. Try again!";
-                    }
-                break;
-
-                case "paper":
-                    if(playerSelection == computerSelection){
-                        return "Draw!";
-                    } else if(playerSelection == "scissors"){
-                        playerPoints += 1;
-                        return "You win! Scissors beats Paper!";
-                    } else if(playerSelection == "rock"){
-                        compPoints += 1;
-                        return "You lose! Paper beats Rock";
-                    } else{
-                        return "Invalid input. Try again!";
-                    }
-                break;
-
-                case "scissors":
-                    if(playerSelection == computerSelection){
-                        return "Draw!";
-                    } else if(playerSelection == "paper"){
-                        compPoints += 1;
-                        return "You lose! Scissors beats Paper!";
-                    } else if(playerSelection == "rock"){
-                        playerPoints += 1;
-                        return "You win! Scissors beats Rock";
-                    }   else{
-                        return "Invalid input. Try again!";
-                    }   
-            }
-        }
-
-        function game() {
-            //Play 5 rounds and give the final score
-            for(let roundNumber = 0; roundNumber < 5; roundNumber++) {
-                console.log(gameRound(getPlayerSelection(), computerPlay()));
-                }
-            let score = "Computer " + compPoints + "-" + playerPoints + " Player";
-            return score;
-        }
-        console.log(game());
-    //game();
-    </script>
+    <script src="rps.js"></script>
 
 </body>
+
 </html>
